--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
   "homepage": "https://github.com/commnerd/maikr-js-offline-orm#readme",
   "dependencies": {
     "localforage": "^1.10.0"
+  },
+  "devDependencies": {
+    "ts-loader": "^9.3.0",
+    "typescript": "^4.6.4",
+    "webpack-cli": "^4.9.2"
   }
 }
